src/test/ui/associated-types/associated-types-issue-20346.stderr
error[E0271]: type mismatch resolving `<Adapter<I> as Iterator>::Item == std::option::Option<T>`
  --> $DIR/associated-types-issue-20346.rs:34:5
   |
LL |     is_iterator_of::<Option<T>, _>(&adapter);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected type parameter, found enum `std::option::Option`
   |
   = note: expected type `T`
              found type `std::option::Option<T>`
note: required by `is_iterator_of`
  --> $DIR/associated-types-issue-20346.rs:15:1
   |
LL | fn is_iterator_of<A, I: Iterator<Item=A>>(_: &I) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
